--- a/example.conf
+++ b/example.conf
@@ -1,1 +1,4 @@
 TASKS=("Backup - No1" "Backup - No2" "Backup - No3")
+LOG="/var/log/synolog/synobackup.log"
+LOGROTATED="/var/log/synolog/synobackup.log.0"
+SYSLOG="/var/log/messages"
