--- a/example.conf
+++ b/example.conf
@@ -1,1 +1,7 @@
-BKP_TASKS=("Backup - No1" "Backup - No2" "Backup - No3")
+{
+  "tasks": [
+    "Backup - No1",
+    "Backup - No2",
+    "Backup - No3"
+    ]
+}
